--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,20 +52,21 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
+
+
+
+
+
+
+
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.google.android.gms:play-services-drive:8.4.0'
-
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
-
-
-
-
-
-
+    compile 'com.android.support:support-v4:23.1.1'
 }
 
 
