--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InvitesScreen_" />
+        <activity android:name=".InvitesScreen_"
+            android:noHistory="true">
+
+        </activity>
         <activity android:name=".ProjectScreen"></activity>
     </application>
 
