--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 
-
 repositories {
     mavenCentral()
     mavenLocal()
@@ -67,6 +66,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-drive:8.4.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
     compile 'com.android.support:support-v4:23.1.1'
+
+    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+
+    compile "com.google.android.gms:play-services-gcm:8.4.0" // never use just play-services, it is too broad and it will break your build
 }
 
 
