--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.colinearproductions.scrumcompanion">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.colinearproductions.scrumcompanion.permission.C2D_MESSAGE"/>
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginScreen_">
+        <activity android:name=".LoginScreen_"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +20,43 @@
             </intent-filter>
         </activity>
         <activity android:name=".InvitesScreen_"
-            android:noHistory="true">
+            >
 
         </activity>
-        <activity android:name=".ProjectScreen"></activity>
+        <activity android:name=".ProjectScreen_"></activity>
+
+
+
+
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="com.example.gcm" />
+            </intent-filter>
+        </receiver>
+        <service
+            android:name="gcm.MyGcmListenerService"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+        <service
+            android:name="gcm.MyInstanceIDListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
+            </intent-filter>
+        </service>
+        <service
+            android:name="gcm.MyRegistrationIntentService"
+            android:exported="false">
+        </service>
+
     </application>
 
 </manifest>
