--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,17 +60,24 @@ dependencies {
 
 
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.google.android.gms:play-services-auth:8.4.0'
-    compile 'com.google.android.gms:play-services-drive:8.4.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
-    compile 'com.android.support:support-v4:23.1.1'
 
-    compile 'com.android.support:cardview-v7:23.1.0'
-    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.6@aar') {
+        transitive = true
+    }
 
-    compile "com.google.android.gms:play-services-gcm:8.4.0" // never use just play-services, it is too broad and it will break your build
+    // never use just play-services, it is too broad and it will break your build
+
+
+    compile    'com.android.support:appcompat-v7:23.1.1'
+    compile    'com.mcxiaoke.volley:library:1.0.19'
+    compile    'com.google.android.gms:play-services-auth:8.4.0'
+    compile    'com.google.android.gms:play-services-drive:8.4.0'
+    compile    'com.fasterxml.jackson.core:jackson-databind:2.7.0'
+    compile    'com.android.support:support-v4:23.1.1'
+    compile    'com.android.support:cardview-v7:23.1.1'
+    compile    'com.android.support:recyclerview-v7:23.1.1'
+    compile    'com.google.android.gms:play-services-gcm:8.4.0'
+    compile    'com.android.support:design:23.1.1'
 }
 
 
