--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,44 +3,40 @@
     package="com.colinearproductions.scrumcompanion">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.colinearproductions.scrumcompanion.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="android.colinearproductions.scrumcompanion.permission.C2D_MESSAGE" />
 
     <application
+        android:name=".MyApp_"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginScreen_"
-            >
+        <activity android:name=".LoginScreen_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InvitesScreen_"
-            >
-
-        </activity>
-        <activity android:name=".ProjectScreen_"></activity>
-
-
-
+        <activity android:name=".InvitesScreen_"></activity>
+        <activity android:name=".ProjectScreen_" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
                 <category android:name="com.example.gcm" />
             </intent-filter>
         </receiver>
+
         <service
-            android:name="gcm.MyGcmListenerService"
-            android:exported="false" >
+            android:name="gcm.MyGcmListenerService_"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
@@ -53,10 +49,13 @@
             </intent-filter>
         </service>
         <service
-            android:name="gcm.MyRegistrationIntentService"
-            android:exported="false">
-        </service>
+            android:name="gcm.MyRegistrationIntentService_"
+            android:exported="false"></service>
 
+        <activity
+            android:name=".MainScreen_"
+            android:label="@string/title_activity_main_screen"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
