--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 repositories {
     mavenCentral()
     mavenLocal()
+
+
+    maven { url "https://jitpack.io" }
 }
 
 apply plugin: 'com.android.application'
@@ -68,16 +71,18 @@ dependencies {
     // never use just play-services, it is too broad and it will break your build
 
 
-    compile    'com.android.support:appcompat-v7:23.1.1'
-    compile    'com.mcxiaoke.volley:library:1.0.19'
-    compile    'com.google.android.gms:play-services-auth:8.4.0'
-    compile    'com.google.android.gms:play-services-drive:8.4.0'
-    compile    'com.fasterxml.jackson.core:jackson-databind:2.7.0'
-    compile    'com.android.support:support-v4:23.1.1'
-    compile    'com.android.support:cardview-v7:23.1.1'
-    compile    'com.android.support:recyclerview-v7:23.1.1'
-    compile    'com.google.android.gms:play-services-gcm:8.4.0'
-    compile    'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
+    compile 'com.google.android.gms:play-services-drive:8.4.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
+    compile 'com.diogobernardino:williamchart:2.2'
 }
 
 
